# Arc-Workbench

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
docs/: architecture.md  roadmap.md  security.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: client.rs  commands.rs  types.rs
src-tauri/src/files/: commands.rs
src-tauri/src/git/: commands.rs  types.rs
src-tauri/src/patch/: commands.rs  types.rs
src-tauri/src/terminal/: commands.rs  manager.rs  mod.rs  shell.rs
src/agent/: contextBuilder.ts  redaction.ts  settings.ts
src/api/: agentApi.ts  browserApi.ts  fileApi.ts  gitApi.ts  patchApi.ts  terminalApi.ts
src/browser/: nativeBrowserTypes.ts  urlPolicy.ts
src/commands/: classifyCommandRisk.ts  commandRiskTypes.ts  commandTypes.ts  detectCwdMismatch.ts  extractCommandProposals.ts  paletteCommands.ts  wrapCommandForTracking.ts
src/components/: AgentActivityRow.tsx  AgentTaskCard.tsx  CodexRouterCard.tsx  CommandPalette.tsx  CommandProposalCard.tsx  CommandResultCard.tsx  ToolRequestCard.tsx
src/editor/: language.ts
src/panes/: AgentPane.tsx  BrowserPane.tsx  EditorPane.tsx  FileExplorerPane.tsx  GitPane.tsx  PaneRenderer.tsx  PatchPreviewPane.tsx  TerminalPane.tsx
src/patch/: extractPatchesFromText.ts  parseUnifiedDiff.ts  (+3 more)
tests/: agent-permissions.spec.ts  codex-router.spec.ts  floating-pane.spec.ts  native-agent-harness.spec.ts
(+26 files in other folders)
