[package]
name = "arc-workbench"
version = "0.1.0"
description = "A terminal-first pane workbench"
authors = ["Arc Workbench contributors"]
edition = "2021"

[lib]
name = "arc_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "time"] }
uuid = { version = "1", features = ["v4"] }
